# TextClassification

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.json  pyproject.toml
src/classifier/: config.py  load_tokenize_data.py  text_classifier.py  utils.py  validate.py
src/tests/: test_text_classifier.py
